--- a/research.Rmd
+++ b/research.Rmd
@@ -108,7 +108,7 @@ I collaborate with [Maho Morimoto](https://sites.google.com/view/mamorimo/) (Sop
 
 ### Conference presentation
 
-- Morimoto, M., & Nagamine, T. (2024, May 13-17). *Spatio-temporal properties of Japanese coronal consonants: An ultrasound study of /d/ and /r/*. (Poster presentation). Accepted for the 13th International Seminar on Speech Production (ISSP), L'Escandille, Autrans, France.  
+- Morimoto, M., & **Nagamine, T**. (2024, May 13-17). *Spatio-temporal properties of Japanese coronal consonants: An ultrasound study of /d/ and /r/*. (Poster presentation). Accepted for the 13th International Seminar on Speech Production (ISSP), L'Escandille, Autrans, France.  
 
 ### Miscellaneous
 
