--- a/teaching.Rmd
+++ b/teaching.Rmd
@@ -28,7 +28,7 @@ body, td {
 
 - **LING325 Topics in Phonetic and Phonological Theory** 
 
-  - Seminar tutor: 3rd year UG, Lancaster University (2023/24, ongoing)
+  - Seminar tutor: 3rd year UG, Lancaster University (2023/24)
 
   - Ten seminars on theoretical topics in phonetics and phonology
 
@@ -46,7 +46,7 @@ body, td {
 
 - **LING221 Sounds of the world's languages** 
 
-  - Seminar tutor: 2nd year UG, Lancaster University (2022-24, ongoing)
+  - Seminar tutor: 2nd year UG, Lancaster University (2022-24)
 
   - Ten seminars on theoretical issues in Phonetics and acoustic analysis using Praat
 
@@ -84,7 +84,7 @@ body, td {
 
 ## **English for Academic Purposes (EAP)**
 
-In September 2023, I served as a tutor on the English for Academic Purposes (EAP) course at Lancaster University. I tutored 13 incoming postgraduate students and were responsible for teaching, one-to-one tutoring, marking essays and providing detailed feedback on their writing. Key topics of the course include:
+In September 2023, I served as a tutor on the English for Academic Purposes (EAP) course at Lancaster University. I tutored 13 incoming postgraduate students and was responsible for delivering teaching, one-to-one tutoring, marking essays and providing detailed feedback on their writing. Key topics of the course include:
 
   - Academic Reading and Writing: critical thinking, academic integrity, referencing, paragraph structure
   
